@@ -15,6 +15,16 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #########################################################################
+# RFC 5842 ( https://tools.ietf.org/html/rfc5842 )
+# EXAMPLE:
+# BIND request:
+# <?xml version="1.0" encoding="utf-8" ?>
+# <D:bind xmlns:D="DAV:">
+#     <D:segment>bar.html</D:segment>
+#     <D:href>http://localhost/foo.html</D:href>
+# </D:bind>
+
+
 package Requests::BIND;
 
 use strict;
@@ -24,10 +34,12 @@ our $VERSION = '2.0';
 
 use base qw( Requests::Request );
 
-use XML::Simple;
+use English qw ( -no_match_vars );
+use URI::Escape;
 
 use FileUtils qw( get_error_document );
 use HTTPHelper qw( read_request_body print_header_and_content );
+use WebDAV::XMLHelper qw( simple_xml_parser );
 
 sub handle {
     my ($self)  = @_;
@@ -39,14 +51,18 @@ sub handle {
     my $xml     = read_request_body();
     my $xmldata = q{};
     my $host    = $cgi->http('Host');
+    
+    main::debug(__PACKAGE__."::handle: xml=$xml");
+    
     if ( !eval { $xmldata = simple_xml_parser( $xml, 0 ); } ) {
+        main::debug($EVAL_ERROR);
         return print_header_and_content(
             get_error_document('400 Bad Request') );
     }
 
     my $segment = ${$xmldata}{'{DAV:}segment'};
     my $href    = ${$xmldata}{'{DAV:}href'};
-    $href =~ s/^https?:\/\/\Q$host\E(:\d+)?$main::VIRTUAL_BASE//xms;
+    $href =~ s{^https?://\Q$host\E(:\d+)?$main::VIRTUAL_BASE}{}xms;
     $href = uri_unescape( uri_unescape($href) );
     my $src = $main::DOCUMENT_ROOT . $href;
     my $dst = $main::PATH_TRANSLATED . $segment;
